--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,28 +1,29 @@
-<footer class="site-footer">
-  <div class="wrapper">
-    <div class="footer-col-wrapper">
-      <div class="footer-col footer-col-1">
-        <h2 class="footer-heading">{{ site.title }}</h2>
-        <p>{{ site.description }}</p>
-      </div>
-
-      <div class="footer-col footer-col-2">
-        <h3>Connect</h3>
-        <ul class="social-media-list">
-          <li><a href="https://github.com/{{ site.github_username }}">GitHub</a></li>
-          <li><a href="https://twitter.com/yourtwitter">Twitter</a></li>
-          <li><a href="https://linkedin.com/in/yourprofile">LinkedIn</a></li>
-        </ul>
-      </div>
-
-      <div class="footer-col footer-col-3">
-        <h3>Resources</h3>
-        <ul>
-          <li><a href="/privacy">Privacy Policy</a></li>
-          <li><a href="/terms">Terms of Use</a></li>
-          <li><a href="/sitemap.xml">Sitemap</a></li>
-        </ul>
-      </div>
+<footer class="footer-grid">
+  <div class="footer-section">
+    <h3>AI Insights</h3>
+    <p>{{ site.description }}</p>
+    <div class="social-links">
+      <a href="#"><i class="fab fa-github"></i></a>
+      <a href="#"><i class="fab fa-twitter"></i></a>
+      <a href="#"><i class="fab fa-linkedin"></i></a>
     </div>
+  </div>
+  
+  <div class="footer-section">
+    <h3>Quick Links</h3>
+    <ul>
+      <li><a href="/about">About</a></li>
+      <li><a href="/blog">All Articles</a></li>
+      <li><a href="/resources">Resources</a></li>
+    </ul>
+  </div>
+  
+  <div class="footer-section">
+    <h3>Legal</h3>
+    <ul>
+      <li><a href="/privacy">Privacy Policy</a></li>
+      <li><a href="/terms">Terms of Use</a></li>
+      <li><a href="/sitemap.xml">Sitemap</a></li>
+    </ul>
   </div>
 </footer>
